<resources>
    <string name="app_name">Management</string>
    <string name="storeInformationManagement">门店信息管理</string>
    <string name="setMenuManagement">套餐管理</string>
    <string name="titleStoreManagement">门店管理</string>
    <string name="keyStoreIcon">门店头像</string>
    <string name="keyStoreName">门店名称</string>
    <string name="keyStoreProfile">门店介绍</string>
    <string name="hintStoreProfile">请在电脑网站上登录后修改</string>
    <string name="errorUploadIcon">请上传头像</string>
    <string name="hintTakePhotoWrite">上传图片需要使用内存卡</string>
    <string name="errorStoreName">请填写门店名称</string>
    <string name="errorStoreCity">请填写门店所在城市</string>
    <string name="errorStoreDetail">请填写门店详细地址</string>
    <string name="errorStoreDescription">请填写门店详情</string>
    <string name="choiceCombos">选择套餐</string>
    <string name="addCombos"><u>添加套餐</u></string>
    <string name="personalTailor">私人定制</string>
    <string name="combos">套餐</string>
    <string name="sellCount">已售:%1$d次</string>
    <string name="clothNum">%1$d套\n服饰</string>
    <string name="negativeNum">%1$d张\n底片</string>
    <string name="enterNum">%1$d张\n入册</string>
    <string name="time_leave_word_the_latest_evaluation">时光留言-最新评价</string>
    <string name="take_photos_first_and_pay_when_you_are_satisfied">先拍照-满意再付款</string>
    <string name="combosInfo">套餐信息</string>
    <string name="title_production_manage">产品管理</string>
    <string name="title_production_detail">产品详情</string>
    <string name="title_combos_detail">套餐详情</string>
    <string name="wedding_photo_studio">婚纱摄影</string>
    <string name="title_costume_manage">服装管理</string>
    <string name="title_baby_photography">宝宝摄影</string>
    <string name="title_portrait_photography">写真摄影</string>
    <string name="title_comtume_detail">服装详情</string>
    <string name="title_costume_pavilion">服装馆</string>
    <string name="man">男人</string>
    <string name="woman">女人</string>
    <string name="add_production">添加产品</string>
    <string name="add_dress">添加服装</string>
</resources>
