<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_content_middle"
        android:text="@string/combosInfo" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:layout_marginStart="@dimen/common_margin"
        android:layout_marginLeft="@dimen/common_margin"
        android:background="@color/yDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:divider="@drawable/bg_divider_w_1dp"
        android:orientation="horizontal"
        android:padding="@dimen/padding_content"
        android:showDividers="middle">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/clothNumText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/clothNum" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/negativeNumText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/negativeNum" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/enterNumText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/enterNum" />

    </LinearLayout>
</LinearLayout>